@@ -1,16 +1,27 @@
 package com.evolveum.midscribe.generator;
 
+import com.evolveum.midpoint.prism.PrismContext;
+import com.evolveum.midpoint.xml.ns._public.common.common_3.SchemaType;
+import com.evolveum.midscribe.generator.export.ExportFormat;
+import com.evolveum.midscribe.generator.export.Exporter;
+import com.evolveum.midscribe.generator.export.HtmlExporter;
+import com.evolveum.midscribe.generator.export.PdfExporter;
+import com.evolveum.midscribe.generator.store.DefaultObjectStore;
+import com.evolveum.midscribe.generator.store.GetOptions;
+import com.evolveum.midscribe.generator.store.InMemoryObjectStoreFactory;
+import com.evolveum.midscribe.generator.store.ObjectStore;
+import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.w3c.dom.Element;
 
 import java.io.*;
-import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
-import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Properties;
+import java.util.stream.Collectors;
 
 /**
  * Created by Viliam Repan (lazyman).
@@ -24,19 +35,23 @@ public class Generator {
     private static final Map<ExportFormat, Class<? extends Exporter>> EXPORTERS;
 
     static {
-        Map<ExportFormat, Class<? extends Exporter>> exporters = new HashMap<>();
-        exporters.put(ExportFormat.PDF, PdfExporter.class);
-        exporters.put(ExportFormat.HTML, HtmlExporter.class);
-
-        EXPORTERS = Collections.unmodifiableMap(exporters);
+        EXPORTERS = Map.ofEntries(
+                Map.entry(ExportFormat.PDF, PdfExporter.class),
+                Map.entry(ExportFormat.HTML, HtmlExporter.class));
     }
 
-    private GenerateOptions configuration;
+    private final GeneratorOptions options;
 
     private LogListener logListener;
 
-    public Generator(GenerateOptions configuration) {
-        this.configuration = configuration;
+    private ObjectStoreFactory objectStoreFactory = new InMemoryObjectStoreFactory();
+
+    public Generator(@NotNull GeneratorOptions options) {
+        this.options = options;
+    }
+
+    public void setObjectStoreFactory(ObjectStoreFactory objectStoreFactory) {
+        this.objectStoreFactory = objectStoreFactory;
     }
 
     public LogListener getLogListener() {
@@ -52,26 +67,29 @@ public class Generator {
     }
 
     public void generate(Properties properties) throws Exception {
-        MidPointObjectStore store = createObjectStore();
+        PrismContext prismContext = GeneratorUtils.createPrismContext();
+        ObjectStore store = createObjectStore(prismContext);
+
+        registerSchemaObjects(prismContext, store);
 
         File adocFile = createAdocFile();
 
         try (Writer output = new BufferedWriter(
                 new OutputStreamWriter(new FileOutputStream(adocFile), StandardCharsets.UTF_8))) {
 
-            VelocityGeneratorProcessor processor = new VelocityGeneratorProcessor(configuration, properties);
+            VelocityGeneratorProcessor processor = new VelocityGeneratorProcessor(options, properties);
 
-            GeneratorContext ctx = new GeneratorContext(configuration, store);
+            GeneratorContext ctx = new GeneratorContext(options, prismContext, store);
             processor.process(output, ctx);
         }
 
         LOG.info("Asciidoc file '{}' generated for all objects", adocFile.getPath());
 
-        if (configuration.getExportFormat() == null) {
+        if (options.getExportFormat() == null || options.getExportFormat() == ExportFormat.ASCIIDOC) {
             return;
         }
 
-        Exporter exporter = createExporter(configuration.getExportFormat());
+        Exporter exporter = createExporter(options.getExportFormat());
         if (exporter == null) {
             LOG.info("No exporter defined, finishing");
             return;
@@ -81,6 +99,28 @@ public class Generator {
         LOG.debug("Preparing export from adoc {} to {}", adocFile, exportFile);
 
         exporter.export(adocFile, exportFile);
+    }
+
+    private void registerSchemaObjects(PrismContext context, ObjectStore objectStore) {
+        List<SchemaType> schemas = objectStore.list(SchemaType.class, GetOptions.createIncludeAdditionalSources());
+        if (schemas.isEmpty()) {
+            return;
+        }
+
+        Map<String, Element> map = schemas.stream()
+                .collect(
+                        Collectors.toMap(
+                                s -> "extension schema object '" + s.getName() + "'",
+                                s -> s.getDefinition().getSchema())
+                );
+
+        LOG.info("Registering {} schema objects", schemas.size());
+
+        try {
+            context.getSchemaRegistry().registerDynamicSchemaExtensions(map);
+        } catch (Exception ex) {
+            LOG.debug("Couldn't register schema objects", ex);
+        }
     }
 
     private Exporter createExporter(ExportFormat format) {
@@ -94,15 +134,16 @@ public class Generator {
             exporter.setLogListener(logListener);
 
             return exporter;
-        } catch (NoSuchMethodException | InvocationTargetException | InstantiationException | IllegalAccessException ex) {
+        } catch (NoSuchMethodException | InvocationTargetException | InstantiationException |
+                 IllegalAccessException ex) {
             LOG.error("Couldn't create formatter of type " + clazz);
             return null;
         }
     }
 
     private File createExportFile(Exporter exporter) throws IOException {
-        File adocOutput = configuration.getAdocOutput();
-        File exportOutput = configuration.getExportOutput();
+        File adocOutput = options.getAdocOutput();
+        File exportOutput = options.getExportOutput();
 
         if (exportOutput == null) {
             exportOutput = new File(adocOutput.getParent(), adocOutput.getName() + "." + exporter.getDefaultExtension());
@@ -112,8 +153,8 @@ public class Generator {
     }
 
     private File createAdocFile() throws IOException {
-        File adocOutput = configuration.getAdocOutput();
-        File exportOutput = configuration.getExportOutput();
+        File adocOutput = options.getAdocOutput();
+        File exportOutput = options.getExportOutput();
 
         if (adocOutput == null) {
             adocOutput = new File(exportOutput.getParent(), exportOutput.getName() + ADOC_EXTENSION);
@@ -134,24 +175,10 @@ public class Generator {
         return file;
     }
 
-    private MidPointObjectStore createObjectStore() throws Exception {
-        MidPointObjectStore store = configuration.getObjectStoreInstance();
-        if (store != null) {
-            LOG.debug("Using midPoint store instance: {}" + store.getClass().getName());
-            return store;
-        }
+    private ObjectStore createObjectStore(PrismContext prismContext) {
+        ObjectStore objects = objectStoreFactory.createObjectStore(options, prismContext, false);
+        ObjectStore additionalObjects = objectStoreFactory.createObjectStore(options, prismContext, true);
 
-        Class<? extends MidPointObjectStore> storeType = configuration.getObjectStoreType();
-        if (storeType == null) {
-            storeType = InMemoryObjectStore.class;
-        }
-
-        LOG.debug("Setting up midPoint store from class: {}", storeType);
-
-        Constructor<? extends MidPointObjectStore> con = storeType.getConstructor(GenerateOptions.class);
-        store = con.newInstance(configuration);
-        store.init();
-
-        return store;
+        return new DefaultObjectStore(objects, additionalObjects);
     }
 }
